--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.8",
-    "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
